# VulkanGameEngine

./: .gitignore  CMakeLists.txt  GameEngine.cpp  GameEngine.h  vcpkg.json
resources/models/: ball.mtl
resources/shaders/: deferred.frag  deferred.vert  fragment.frag  phong.frag  phong.vert  vertex.vert
src/: CMakeLists.txt  Entities.cpp  Entities.hpp  World.cpp  World.hpp
src/Components/: CMakeLists.txt  ModelComponent.h
src/Components/RenderComponents/: CMakeLists.txt  Camera.cpp  Camera.hpp  Framebuffer.hpp  LightComponent.hpp  Material.hpp  VulkanPipeline.cpp  VulkanPipeline.hpp
src/Managers/: CMakeLists.txt  ModelManager.cpp  ModelManager.hpp  ResourceManager.cpp  ResourceManager.hpp  VulkanResourceManager.cpp  VulkanResourceManager.hpp
src/Systems/: CMakeLists.txt
src/Systems/RenderSystem/: CMakeLists.txt  LightingSystem.cpp  LightingSystem.hpp  RenderLibraryImplementations.cpp  RenderSystem.cpp  RenderSystem.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  VulkanTypes.cpp  VulkanTypes.hpp  VulkanUtility.cpp  VulkanUtility.hpp
src/Utility/: CMakeLists.txt
src/imgui/: CMakeLists.txt  imgui_impl_sdl.cpp
